added endpoint for workouts
