# internal/auth/handlers.go
@@ -1,148 +1,6 @@
 package auth
 
-import (
-	"GoAPIBackEnd/internal/database"
-)
-
-var connDB = database.Conn
-
 /*
-// @Summary Create Task.
-// @Description Notes:<br>Leave the "relations" sub-entity empty.
-// @Tags Task
-// @Produce json
-// @Param request body model.Task true "Task"
-// @Success 200 {object} model.APIError
-// @Failure 208 {object} model.APIError
-// @Failure 400 {object} model.APIError
-// @Failure 500 {object} model.APIError
-// @Router /tasks [post]
-func Post(ctx *gin.Context) {
-	task := models.Task{}
-	err := ctx.ShouldBindJSON(&task)
-	if err != nil {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusBadRequest, "INVALID_REQUEST", err))
-		return
-	}
-
-	if len(task.Id) == 0 {
-		uid, err := uuid.NewUUID()
-		if err != nil {
-			return
-		}
-		task.Id = uid.String()
-	}
-
-	for _, t := range models.LibTasks {
-		if t.Id == task.Id {
-			apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusAlreadyReported, "DUPLICATE_ID", fmt.Errorf("Task with id %s already exists", task.Id)))
-			return
-		}
-	}
-
-	models.LibTasks[task.Id] = &task
-	apperrors.GetAPIError(ctx, models.LibTasks[task.Id], http.StatusOK, nil)
-}
-
-// @Summary Get Task.
-// @Tags Task
-// @Produce json
-// @Param id path string true "Task Id"
-// @Success 200 {object} model.Task
-// @Failure 404 {object} model.APIError
-// @Failure 500 {object} model.APIError
-// @Router /tasks/{id} [get]
-func Get(ctx *gin.Context) {
-	id := ctx.Param("id")
-
-	task, ok := models.LibTasks[id]
-	if !ok {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusNotFound, "TASK_NOT_FOUND", fmt.Errorf("Task with id %s not found", id)))
-		return
-	}
-
-	apperrors.GetAPIError(ctx, task, http.StatusOK, nil)
-}
-
-// @Summary	Query Task.
-// @Tags		Task
-// @Produce	json
-// @Param		id		query		string	false	"Task Id"
-// @Success	200		{array}		model.Task
-// @Failure 404     {object}    model.APIError
-// @Failure	500		{object}	model.APIError
-// @Router		/tasks [get]
-func Query(ctx *gin.Context) {
-	libTasks := models.LibTasks
-	if len(libTasks) == 0 {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusNotFound, "TASK_NOT_FOUND", fmt.Errorf("Task not found")))
-		return
-	}
-
-	var tasks []models.Task
-	for _, task := range libTasks {
-		tasks = append(tasks, *task)
-	}
-
-	apperrors.GetAPIError(ctx, tasks, http.StatusOK, nil)
-}
-
-// @Summary Update Task.
-// @Tags Task
-// @Produce json
-// @Param id path string false "Task"
-// @Param request body model.Task true "Task"
-// @Success 200 {array}	 model.Task
-// @Failure 400 {object} model.APIError
-// @Failure 404 {object} model.APIError
-// @Failure 500 {object} model.APIError
-// @Router /tasks/{id} [put]
-func Put(ctx *gin.Context) {
-	task := models.Task{}
-	err := ctx.ShouldBindJSON(&task)
-	if err != nil {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusBadRequest, "INVALID_REQUEST", err))
-		return
-	}
-
-	id := ctx.Param("id")
-	if task.Id != "" && task.Id != id {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusBadRequest, "ID_MISMATCH", fmt.Errorf("Id in body must match URL")))
-		return
-	}
-
-	t, ok := models.LibTasks[id]
-	if !ok {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusNotFound, "TASK_NOT_FOUND", fmt.Errorf("Task not found")))
-		return
-	}
-
-	t.Title = task.Title
-	t.Done = task.Done
-
-	apperrors.GetAPIError(ctx, t, http.StatusOK, nil)
-}
-
-// @Summary Delete Task.
-// @Tags Task
-// @Produce json
-// @Param id path string false "Task"
-// @Success 200 {object} model.APIError
-// @Failure 404 {object} model.APIError
-// @Failure 500 {object} model.APIError
-// @Router /tasks/{id} [delete]
-func Del(ctx *gin.Context) {
-	id := ctx.Param("id")
-
-	_, ok := models.LibTasks[id]
-	if !ok {
-		apperrors.GetAPIError(ctx, nil, 0, apperrors.APIError{}.New(http.StatusNotFound, "TASK_NOT_FOUND", fmt.Errorf("Task not found")))
-		return
-	}
-
-	delete(models.LibTasks, id)
-	apperrors.GetAPIError(ctx, nil, http.StatusNoContent, nil)
-}
 
 // @Summary	Download images
 // @Tags		Task
